Update index.html w/ link to style.css

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 {"@context":"https://schema.org","@type":"WebSite","description":"ACM-W advocates internationally for the full engagement of women in all aspects of the computing field, providing a wide range of programs and services to ACM members and working in the larger community to advance the contributions of technical women.","headline":"614acmw.github.io","name":"614acmw.github.io","url":"https://614acmw.github.io/"}</script>
 <!-- End Jekyll SEO tag -->
 
-    <link rel="stylesheet" href="/assets/css/style.css?v=bde4faed0fe1c841c06f61cd298690b1d0ab6897">
+    <link rel="stylesheet" href="style.css?v=bde4faed0fe1c841c06f61cd298690b1d0ab6897">
     <!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
 
 <!-- Setup Google Analytics -->
