--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </head>
   <body>
     <div class="container-lg px-3 my-5 markdown-body">
-      <img src="banner2.jpg">
+      <img src="Banner2.jpg">
       <h1><a href="https://614acmw.github.io/">614acmw.github.io</a></h1>
 
       <p>614ACMW is a new local ACM-W professional chapter, focused on the advocacy, support and celebration of Professional Women in Computing. Our meetings will be a mix of in-person and online, and will include tech talks, professional networking, career support, socializing, and fun technical activities. Our chapter will buddy with the NW Ohio ACM-W, OCWiC ACMW, and ACM-W Student Chapters in central Ohio. 
