--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <body>
 
     
-      <img src="https://614acmw.github.io/Banner2.jpg">
+      <img src="https://614acmw.github.io/Banner2.jpg" class="center">
       <h1><a href="https://614acmw.github.io/">614acmw.github.io</a></h1>
 
       <div class="topnav">
@@ -50,9 +50,10 @@
 </div>
     
 <div class="content">
+  <block>
       <p>614ACMW is a new local ACM-W professional chapter, focused on the advocacy, support and celebration of Professional Women in Computing. Our meetings will be a mix of in-person and online, and will include tech talks, professional networking, career support, socializing, and fun technical activities. Our chapter will buddy with the NW Ohio ACM-W, OCWiC ACMW, and ACM-W Student Chapters in central Ohio. 
       </p>
-
+</block>
 
   
 <h2 id="membership">Member Requirements</h2>
