--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <!-- end custom head snippets -->
 
   </head>
-  <body>
+  <body class="center">
 
     
       <img src="https://614acmw.github.io/Banner2.jpg" class="center">
@@ -52,15 +52,13 @@
 <div class="content">
   <block>
       <p>614ACMW is a new local ACM-W professional chapter, focused on the advocacy, support and celebration of Professional Women in Computing. Our meetings will be a mix of in-person and online, and will include tech talks, professional networking, career support, socializing, and fun technical activities. Our chapter will buddy with the NW Ohio ACM-W, OCWiC ACMW, and ACM-W Student Chapters in central Ohio. 
-      </p>
 </block>
 
   
 <h2 id="membership">Member Requirements</h2>
 <p>Support our mission to support, advocate and celebrate women in computing. No dues, minimum participation or committee responsibilities are required. We welcome women, men, non-binary, academic, and industry technology professionals at all levels.  
-<\p>
 
-<p>What are the member benefits?</p>
+<h3>Benefits</h3>  
   <ul>
 <li>Early notice of upcoming events
 </li><li>Member only events
@@ -87,13 +85,9 @@
 <p>## form ## </p>
   
 <h2 id="about">Officers</h2>
-<ul>
-  <li>Bettina Bair, retired, senior lecturer in the Computer Science & Engineering department of Ohio State University, founder of the Ohio Celebration of Women in Computing (OCWiC) and OSU ACM-W Student Chapter
-  </li>
-  <li>Amanda Kauppila, software engineer at Ticketmaster, and former officer of the award winning OSU ACM-W Student Chapter
-<\li>
-  <li>Dr. Tanya Berger-Wolf, Professor of Computer Science Engineering, Electrical and Computer Engineering, and Evolution, Ecology, and Organismal Biology at The Ohio State University, Director, Translational Data Analytics Institute at OSU, Co-founder & Director, AI for conservation nonprofit Wild Me
-</li></ul>
+<block>Bettina Bair, retired, senior lecturer in the Computer Science & Engineering department of Ohio State University, founder of the Ohio Celebration of Women in Computing (OCWiC) and OSU ACM-W Student Chapter
+</block><block>Amanda Kauppila, software engineer at Ticketmaster, and former officer of the award winning OSU ACM-W Student Chapter
+</block><block>Dr. Tanya Berger-Wolf, Professor of Computer Science Engineering, Electrical and Computer Engineering, and Evolution, Ecology, and Organismal Biology at The Ohio State University, Director, Translational Data Analytics Institute at OSU, Co-founder & Director, AI for conservation nonprofit Wild Me</block>
       
     </div>
 
