--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 </div>
     
 <div class="content">
-  <block>
+
       <p>614ACMW is a new local ACM-W professional chapter, focused on the advocacy, support and celebration of Professional Women in Computing. Our meetings will be a mix of in-person and online, and will include tech talks, professional networking, career support, socializing, and fun technical activities. Our chapter will buddy with the NW Ohio ACM-W, OCWiC ACMW, and ACM-W Student Chapters in central Ohio. 
-</block>
+
 
   
 <h2 id="membership">Member Requirements</h2>
@@ -85,10 +85,14 @@
 <p>## form ## </p>
   
 <h2 id="about">Officers</h2>
-<block>Bettina Bair, retired, senior lecturer in the Computer Science & Engineering department of Ohio State University, founder of the Ohio Celebration of Women in Computing (OCWiC) and OSU ACM-W Student Chapter
-</block><block>Amanda Kauppila, software engineer at Ticketmaster, and former officer of the award winning OSU ACM-W Student Chapter
-</block><block>Dr. Tanya Berger-Wolf, Professor of Computer Science Engineering, Electrical and Computer Engineering, and Evolution, Ecology, and Organismal Biology at The Ohio State University, Director, Translational Data Analytics Institute at OSU, Co-founder & Director, AI for conservation nonprofit Wild Me</block>
-      
+<ul>
+<li>Bettina Bair, retired, senior lecturer in the Computer Science & Engineering department of Ohio State University, founder of the Ohio Celebration of Women in Computing (OCWiC) and OSU ACM-W Student Chapter
+</li>
+<li>Amanda Kauppila, software engineer at Ticketmaster, and former officer of the award winning OSU ACM-W Student Chapter
+</li>
+<li>Dr. Tanya Berger-Wolf, Professor of Computer Science Engineering, Electrical and Computer Engineering, and Evolution, Ecology, and Organismal Biology at The Ohio State University, Director, Translational Data Analytics Institute at OSU, Co-founder & Director, AI for conservation nonprofit Wild Me</block>
+ </li>  
+  </ul>
     </div>
 
 <div class="footer">
