--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <body class="center">
 
     
-      <img src="https://614acmw.github.io/Banner2.jpg" class="center">
+      <img src="https://614acmw.github.io/Banner2.jpg">
       <h1><a href="https://614acmw.github.io/">614acmw.github.io</a></h1>
 
       <div class="topnav">
