--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </div>
 
 <div class="footer">
-  <p>Footer</p>
+  <p>(c) 2023 Central Ohio ACM-W Professional Chapter</p>
 </div>
    
   </body>
