--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 
 <!-- You can set your favicon here -->
-<!-- link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" -->
+<!-- link rel="shortcut icon" type="image/x-icon" href="https://614acmw.github.io/favicon.png" -->
 
 <!-- end custom head snippets -->
 
