--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
 
   </head>
   <body class="center">
-
     
-      <img src="https://614acmw.github.io/Banner2.jpg">
+      <img src="https://614acmw.github.io/Banner2.jpg" class="responsive">
       <h1><a href="https://614acmw.github.io/">614acmw.github.io</a></h1>
 
       <div class="topnav">
