--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 
 <!-- You can set your favicon here -->
-<link rel="icon" type="image/x-icon" href="https://614acmw.github.io/favicon.png">
+<link rel="icon" type="image/x-icon" href="https://614acmw.github.io/favico.png">
 
 <!-- end custom head snippets -->
 
