--- a/index.html
+++ b/index.html
@@ -68,9 +68,7 @@ We welcome women, men, non-binary, academic, and industry technology professiona
 </li><li>Member Badge pin
 </ul>
 
-<h2 id="contact">Contact</h2>
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe3fWmCBaJUqCPow5CDJbDIb33ftjMfLMCMQ2tzHUiMy8DBtg/viewform?embedded=true" width="640" height="1041" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
- 
+Interested in becoming a member?  <a href="#contact">Contact us!</a>
   
 <h2 id="events">Events</h2>
 Check out upcoming events and sign-up via <a href="https://www.meetup.com/g/614-acm-w-prof-chapter/">Meetup</a> 
@@ -91,6 +89,11 @@ Join the discussion on <a href="https://www.linkedin.com/groups/14308931/">Linke
 <li><a href="https://www.linkedin.com/in/tanyabw/">Dr. Tanya Berger-Wolf</a>, Professor of Computer Science Engineering, Electrical and Computer Engineering, and Evolution, Ecology, and Organismal Biology at The Ohio State University, Director, Translational Data Analytics Institute at OSU, Co-founder & Director, AI for conservation nonprofit Wild Me</block>
 </li>  
 </ul>
+
+<h2 id="contact">Contact</h2>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe3fWmCBaJUqCPow5CDJbDIb33ftjMfLMCMQ2tzHUiMy8DBtg/viewform?embedded=true" height="700" frameborder="0" marginheight="20" marginwidth="20">Loading…</iframe>
+
+  
 </div> <!-- end of content -->
 
 <div class="footer">
