--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@ Join the discussion on <a href="https://www.linkedin.com/groups/14308931/">Linke
 <ul>
 <li><a href="https://www.linkedin.com/in/bettina-bair/">Bettina Bair</a>, retired, senior lecturer in the Computer Science & Engineering department of Ohio State University, founder of the Ohio Celebration of Women in Computing (OCWiC) and OSU ACM-W Student Chapter
 </li>
-<li><a href="https://www.linkedin.com/in/amanda-kauppila-59914724/">Amanda Kauppila<\a>, software engineer at Ticketmaster, and former officer of the award winning OSU ACM-W Student Chapter
+<li><a href="https://www.linkedin.com/in/amanda-kauppila-59914724/">Amanda Kauppila</a>, software engineer at Ticketmaster, and former officer of the award winning OSU ACM-W Student Chapter
 </li>
 <li><a href="https://www.linkedin.com/in/tanyabw/">Dr. Tanya Berger-Wolf</a>, Professor of Computer Science Engineering, Electrical and Computer Engineering, and Evolution, Ecology, and Organismal Biology at The Ohio State University, Director, Translational Data Analytics Institute at OSU, Co-founder & Director, AI for conservation nonprofit Wild Me</block>
 </li>  
 </ul>
 
 <h2 id="contact">Contact</h2>
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe3fWmCBaJUqCPow5CDJbDIb33ftjMfLMCMQ2tzHUiMy8DBtg/viewform?embedded=true" height="700" frameborder="0" marginheight="20" marginwidth="20">Loading…</iframe>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe3fWmCBaJUqCPow5CDJbDIb33ftjMfLMCMQ2tzHUiMy8DBtg/viewform?embedded=true" width="100%" height="700" frameborder="0" marginheight="20" marginwidth="20">Loading…</iframe>
 
   
 </div> <!-- end of content -->
