--- a/index.html
+++ b/index.html
@@ -72,7 +72,12 @@ Interested in becoming a member?  <a href="#contact">Contact us!</a>
   
 <h2 id="events">Events</h2>
 Check out upcoming events and sign-up via <a href="https://www.meetup.com/g/614-acm-w-prof-chapter/">Meetup</a> 
+<script language="JavaScript" src="https://feedroll.com/rssviewer/feed2js.php?src=https%3A%2F%2Fwww.meetup.com%2F614-acm-w-prof-chapter%2Fevents%2Frss%2F&date=y&targ=y&utf=y&html=a"  charset="UTF-8" type="text/javascript"></script>
 
+<noscript>
+<a href="https://feedroll.com/rssviewer/feed2js.php?src=https%3A%2F%2Fwww.meetup.com%2F614-acm-w-prof-chapter%2Fevents%2Frss%2F&date=y&targ=y&utf=y&html=y">View RSS feed</a>
+</noscript>
+  
 <h2>Discussion</h2>
 Join the discussion on <a href="https://www.linkedin.com/groups/14308931/">LinkedIn</a>
 
