--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 </div> <!-- end of topnav -->
     
 <div class="content">
-<p>614ACMW is a new local ACM-W professional chapter, focused on the advocacy, support and celebration of Professional Women in Computing. Our meetings will be a mix of in-person and online, and will include tech talks, professional networking, career support, socializing, and fun technical activities. Our chapter will buddy with the NW Ohio ACM-W, OCWiC ACMW, and ACM-W Student Chapters in central Ohio. 
+614ACMW is a new local ACM-W professional chapter, focused on the advocacy, support and celebration of Professional Women in Computing. Our meetings will be a mix of in-person and online, and will include tech talks, professional networking, career support, socializing, and fun technical activities. Our chapter will buddy with the NW Ohio ACM-W, OCWiC ACMW, and ACM-W Student Chapters in central Ohio. 
 
 <h2 id="membership">Member Requirements</h2>
-<p>Support our mission to support, advocate and celebrate women in computing. 
+Support our mission to support, advocate and celebrate women in computing. 
 We welcome women, men, non-binary, academic, and industry technology professionals at all levels.  
 
 <h3>Benefits</h3>  
@@ -95,7 +95,7 @@ Join the discussion on <a href="https://www.linkedin.com/groups/14308931/">Linke
 </li>  
 </ul>
 
-<h2 id="contact">Contact</h2>
+<h2 id="contact">Be a Member. Be a Speaker. Be both!</h2>
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe3fWmCBaJUqCPow5CDJbDIb33ftjMfLMCMQ2tzHUiMy8DBtg/viewform?embedded=true" width="100%" height="700" frameborder="0" marginheight="20" marginwidth="20">Loading…</iframe>
 
   
