--- a/index.html
+++ b/index.html
@@ -49,12 +49,14 @@
 </div> <!-- end of topnav -->
     
 <div class="content">
-614ACMW is a new local ACM-W professional chapter, focused on the advocacy, support and celebration of Professional Women in Computing. Our meetings will be a mix of in-person and online, and will include tech talks, professional networking, career support, socializing, and fun technical activities. Our chapter will buddy with the NW Ohio ACM-W, OCWiC ACMW, and ACM-W Student Chapters in central Ohio. 
-
+<p>614ACMW is a new local ACM-W professional chapter, focused on the advocacy, support and celebration of Professional Women in Computing. Our meetings will be a mix of in-person and online, and will include tech talks, professional networking, career support, socializing, and fun technical activities. Our chapter will buddy with the NW Ohio ACM-W, OCWiC ACMW, and ACM-W Student Chapters in central Ohio. 
+</p>
+  
 <h2 id="membership">Member Requirements</h2>
-Support our mission to support, advocate and celebrate women in computing. 
-We welcome women, men, non-binary, academic, and industry technology professionals at all levels.  
-
+<p>Support our mission to support, advocate and celebrate women in computing. 
+</p> 
+<p>We welcome women, men, non-binary, academic, and industry technology professionals at all levels.  
+</p>
 <h3>Benefits</h3>  
 <ul>
 <li>Early notice of upcoming events
