--- a/index.html
+++ b/index.html
@@ -89,14 +89,17 @@ Join the discussion on <a href="https://www.linkedin.com/groups/14308931/">Linke
 
  
 <h2 id="about">Officers</h2>
-<ul>
-<li><a href="https://www.linkedin.com/in/bettina-bair/">Bettina Bair</a>, retired, senior lecturer in the Computer Science & Engineering department of Ohio State University, founder of the Ohio Celebration of Women in Computing (OCWiC) and OSU ACM-W Student Chapter
-</li>
-<li><a href="https://www.linkedin.com/in/amanda-kauppila-59914724/">Amanda Kauppila</a>, software engineer at Ticketmaster, and former officer of the award winning OSU ACM-W Student Chapter
-</li>
-<li><a href="https://www.linkedin.com/in/tanyabw/">Dr. Tanya Berger-Wolf</a>, Professor of Computer Science Engineering, Electrical and Computer Engineering, and Evolution, Ecology, and Organismal Biology at The Ohio State University, Director, Translational Data Analytics Institute at OSU, Co-founder & Director, AI for conservation nonprofit Wild Me</block>
-</li>  
-</ul>
+<dl>
+<dt><a href="https://www.linkedin.com/in/bettina-bair/">Bettina Bair</a></dt>
+  <dd>retired, senior lecturer in the Computer Science & Engineering department of Ohio State University, founder of the Ohio Celebration of Women in Computing (OCWiC) and OSU ACM-W Student Chapter</dd>
+  
+<dt><a href="https://www.linkedin.com/in/amanda-kauppila-59914724/">Amanda Kauppila</a></dt>
+  <dd>software engineer at Ticketmaster, and former officer of the award winning OSU ACM-W Student Chapter</dd>
+
+<dt><a href="https://www.linkedin.com/in/tanyabw/">Dr. Tanya Berger-Wolf</a></dt>
+<dd>  Professor of Computer Science Engineering, Electrical and Computer Engineering, and Evolution, Ecology, and Organismal Biology at The Ohio State University, Director, Translational Data Analytics Institute at OSU, Co-founder & Director, AI for conservation nonprofit Wild Me</dd>
+
+</dl>
 
 <h2 id="contact">Be a Member. Be a Speaker. Be both!</h2>
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe3fWmCBaJUqCPow5CDJbDIb33ftjMfLMCMQ2tzHUiMy8DBtg/viewform?embedded=true" width="100%" height="1100" frameborder="0" marginheight="20" marginwidth="20">Loading…</iframe>
