--- a/index.html
+++ b/index.html
@@ -62,13 +62,10 @@
 <ul>
 <li>Early notice of upcoming events
 </li><li>Member only events
-</li><li>ACM-W newsletter
+</li><li>Private discussion group
 </li><li>ACM tech and career newsletter
 </li><li>Input/vote on events, officers, activities, meets etc.
-</li><li>Bragging rights for being a founding member
-</li><li>Small swag, like stickers, posters, notes and pens
 </li><li>Member Badge image for email and webpage
-</li><li>Member Badge pin
 </ul>
 
 Interested in becoming a member?  <a href="#contact">Contact us!</a>
@@ -82,7 +79,7 @@ Check out upcoming events and sign-up via <a href="https://www.meetup.com/g/614-
 </noscript>
   
 <h2>Discussion</h2>
-Join the discussion on <a href="https://www.linkedin.com/groups/14308931/">LinkedIn</a>
+Join the discussion at <a href="https://www.linkedin.com/groups/14308931/">LinkedIn</a>
 
 <h2>Jobs</h2>
 ## Coming soon ##
