--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 Interested in becoming a member?  <a href="#contact">Contact us!</a>
   
 <h2 id="events">Events</h2>
-Check out upcoming events and sign-up via <a href="https://www.meetup.com/614-acm-w-prof-chapter/">Meetup</a> 
+Check out upcoming events and sign-up at out <a href="https://www.meetup.com/614-acm-w-prof-chapter/">Meetup</a> group.
 <script language="JavaScript" src="https://feedroll.com/rssviewer/feed2js.php?src=https%3A%2F%2Fwww.meetup.com%2F614-acm-w-prof-chapter%2Fevents%2Frss%2F&date=y&targ=y&utf=y&html=a"  charset="UTF-8" type="text/javascript"></script>
 
 <noscript>
@@ -79,10 +79,8 @@ Check out upcoming events and sign-up via <a href="https://www.meetup.com/614-ac
 </noscript>
   
 <h2>Discussion</h2>
-Join the discussion at <a href="https://www.linkedin.com/groups/14308931/">LinkedIn</a>
-
-<h2>Jobs</h2>
-## Coming soon ##
+Join the public discussion at our <a href="https://www.linkedin.com/groups/14308931/">LinkedIn</a> group.
+Join the private discussion at <a href="https://www.facebook.com/groups/3441995576014231/"Facebook</a> group.
 
  
 <h2 id="about">Officers</h2>
