--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ Check out upcoming events and sign-up at out <a href="https://www.meetup.com/614
   
 <h2>Discussion</h2>
 Join the public discussion at our <a href="https://www.linkedin.com/groups/14308931/">LinkedIn</a> group.
-Join the private discussion at <a href="https://www.facebook.com/groups/3441995576014231/"Facebook</a> group.
+Join the private discussion at <a href="https://www.facebook.com/groups/3441995576014231/">Facebook</a> group.
 
  
 <h2 id="about">Officers</h2>
