--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </head>
 <body class="center">
 
-<img src="https://614acmw.github.io/Banner2.jpg" class="responsive">
+<img src="https://614acmw.github.io/Banner2.jpg" class="responsive" alt="614acmw logo & text: Supporting, celebrating and advocating for women in computing in the Columbus, Ohio and Franklin County area.">
 <h1><a href="https://614acmw.github.io/">614acmw.github.io</a></h1>
 
 <div class="topnav">
@@ -71,7 +71,8 @@
 Interested in becoming a member?  <a href="#contact">Contact us!</a>
   
 <h2 id="events">Events</h2>
-Check out upcoming events and sign-up at out <a href="https://www.meetup.com/614-acm-w-prof-chapter/">Meetup</a> group.
+
+  Check out upcoming events and sign-up at out <a href="https://www.meetup.com/614-acm-w-prof-chapter/">Meetup <img src="https://614acmw.github.io/meetup-logo.png" class="responsive" alt="meetup logo" style="float:left"></a> group.
 <script language="JavaScript" src="https://feedroll.com/rssviewer/feed2js.php?src=https%3A%2F%2Fwww.meetup.com%2F614-acm-w-prof-chapter%2Fevents%2Frss%2F&date=y&targ=y&utf=y&html=a"  charset="UTF-8" type="text/javascript"></script>
 
 <noscript>
@@ -79,8 +80,8 @@ Check out upcoming events and sign-up at out <a href="https://www.meetup.com/614
 </noscript>
   
 <h2>Discussion</h2>
-Join the public discussion at our <a href="https://www.linkedin.com/groups/14308931/">LinkedIn</a> group.
-Join the private discussion at <a href="https://www.facebook.com/groups/3441995576014231/">Facebook</a> group.
+Join the public discussion at our <a href="https://www.linkedin.com/groups/14308931/">LinkedIn <img src="https://614acmw.github.io/linkedin-logo.png" class="responsive" alt="linkedIn logo" style="float:left"></a> group.
+Join the private discussion at <a href="https://www.facebook.com/groups/3441995576014231/">Facebook <img src="https://614acmw.github.io/fb-logo.png" class="responsive" alt="facebook logo" style="float:left"></a> group.
 
  
 <h2 id="about">Officers</h2>
