--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@ Interested in becoming a member?  <a href="#contact">Contact us!</a>
   
 <h2 id="events">Events</h2>
 
-  Check out upcoming events and sign-up at out <a href="https://www.meetup.com/614-acm-w-prof-chapter/">Meetup <img src="https://614acmw.github.io/meetup-logo.png" class="responsive" alt="meetup logo" style="float:left"></a> group.
+<p>Check out upcoming events and sign-up at out <a href="https://www.meetup.com/614-acm-w-prof-chapter/">Meetup <img src="https://614acmw.github.io/meetup-logo.png" height="200" alt="meetup logo" style="float:left"></a> group.
+</p>
 <script language="JavaScript" src="https://feedroll.com/rssviewer/feed2js.php?src=https%3A%2F%2Fwww.meetup.com%2F614-acm-w-prof-chapter%2Fevents%2Frss%2F&date=y&targ=y&utf=y&html=a"  charset="UTF-8" type="text/javascript"></script>
 
 <noscript>
@@ -80,8 +81,8 @@ Interested in becoming a member?  <a href="#contact">Contact us!</a>
 </noscript>
   
 <h2>Discussion</h2>
-Join the public discussion at our <a href="https://www.linkedin.com/groups/14308931/">LinkedIn <img src="https://614acmw.github.io/linkedin-logo.png" class="responsive" alt="linkedIn logo" style="float:left"></a> group.
-Join the private discussion at <a href="https://www.facebook.com/groups/3441995576014231/">Facebook <img src="https://614acmw.github.io/fb-logo.png" class="responsive" alt="facebook logo" style="float:left"></a> group.
+<p>Join the public discussion at our <a href="https://www.linkedin.com/groups/14308931/">LinkedIn <img src="https://614acmw.github.io/linkedin-logo.png"  height="200" alt="linkedIn logo" style="float:left"></a> group.
+</p><p>Join the private discussion at <a href="https://www.facebook.com/groups/3441995576014231/">Facebook <img src="https://614acmw.github.io/fb-logo.png" height="200" alt="facebook logo" style="float:left"></a> group.</p>
 
  
 <h2 id="about">Officers</h2>
