--- a/index.html
+++ b/index.html
@@ -74,11 +74,14 @@ Interested in becoming a member?  <a href="#contact">Contact us!</a>
 
 <p>Check out upcoming events and sign-up at out <a href="https://www.meetup.com/614-acm-w-prof-chapter/">Meetup <img src="https://614acmw.github.io/meetup-logo.png" height="200" alt="meetup logo" style="float:left"></a> group.
 </p>
-<script language="JavaScript" src="https://feedroll.com/rssviewer/feed2js.php?src=https%3A%2F%2Fwww.meetup.com%2F614-acm-w-prof-chapter%2Fevents%2Frss%2F&date=y&targ=y&utf=y&html=a"  charset="UTF-8" type="text/javascript"></script>
+
+  <!-- script to retrieve events from meetup group
+<script language="JavaScript" src="https://feedroll.com/rssviewer/feed2js.php?src=https://www.meetup.com%2F614-acm-w-prof-chapter%2Fevents%2Frss%2F&date=y&targ=y&utf=y&html=a"  charset="UTF-8" type="text/javascript"></script>
 
 <noscript>
 <a href="https://feedroll.com/rssviewer/feed2js.php?src=https%3A%2F%2Fwww.meetup.com%2F614-acm-w-prof-chapter%2Fevents%2Frss%2F&date=y&targ=y&utf=y&html=y">View RSS feed</a>
 </noscript>
+  -->
   
 <h2>Discussion</h2>
 <p>Join the public discussion at our <a href="https://www.linkedin.com/groups/14308931/">LinkedIn <img src="https://614acmw.github.io/linkedin-logo.png"  height="200" alt="linkedIn logo" style="float:left"></a> group.
