--- a/index.html
+++ b/index.html
@@ -71,23 +71,23 @@
 Interested in becoming a member?  <a href="#contact">Contact us!</a>
   
 <h2 id="events">Events</h2>
-<a href="https://www.meetup.com/614-acm-w-prof-chapter/"><img src="https://614acmw.github.io/meetup-logo.png" height="200" alt="meetup logo" style="float:left"></a>
+<a href="https://www.meetup.com/614-acm-w-prof-chapter/"><img src="https://614acmw.github.io/meetup-logo.png" height="150" width="150" alt="meetup logo" style="float:left"></a>
 <p>Check out upcoming events and sign-up at out <a href="https://www.meetup.com/614-acm-w-prof-chapter/">Meetup </a> group.</p>
 
 
   <!-- script to retrieve events from meetup group
-<script language="JavaScript" src="https://feedroll.com/rssviewer/feed2js.php?src=https://www.meetup.com%2F614-acm-w-prof-chapter%2Fevents%2Frss%2F&date=y&targ=y&utf=y&html=a"  charset="UTF-8" type="text/javascript"></script>
-
-<noscript>
-<a href="https://feedroll.com/rssviewer/feed2js.php?src=https%3A%2F%2Fwww.meetup.com%2F614-acm-w-prof-chapter%2Fevents%2Frss%2F&date=y&targ=y&utf=y&html=y">View RSS feed</a>
-</noscript>
+    <script language="JavaScript" src="https://feedroll.com/rssviewer/feed2js.php?src=https://www.meetup.com%2F614-acm-w-prof-chapter%2Fevents%2Frss%2F&date=y&targ=y&utf=y&html=a"  charset="UTF-8" type="text/javascript"></script>
+    
+    <noscript>
+    <a href="https://feedroll.com/rssviewer/feed2js.php?src=https%3A%2F%2Fwww.meetup.com%2F614-acm-w-prof-chapter%2Fevents%2Frss%2F&date=y&targ=y&utf=y&html=y">View RSS feed</a>
+    </noscript>
   -->
   
 <h2>Discussion</h2>
-<a href="https://www.linkedin.com/groups/14308931/"><img src="https://614acmw.github.io/linkedin-logo.png"  height="200" alt="linkedIn logo" style="float:left"></a>
+<a href="https://www.linkedin.com/groups/14308931/"><img src="https://614acmw.github.io/linkedin-logo.png"  height="150" width="150" alt="linkedIn logo" style="float:left"></a>
 <p>Join the public discussion at our <a href="https://www.linkedin.com/groups/14308931/">LinkedIn <img src="https://614acmw.github.io/linkedin-logo.png"  height="200" alt="linkedIn logo" style="float:left"></a> group.</p>
   
-<a href="https://www.facebook.com/groups/3441995576014231/"><img src="https://614acmw.github.io/fb-logo.png" height="200" alt="facebook logo" style="float:left"></a>
+<a href="https://www.facebook.com/groups/3441995576014231/"><img src="https://614acmw.github.io/fb-logo.png" height="150" width="150" alt="facebook logo" style="float:left"></a>
 <p>Join the private discussion at <a href="https://www.facebook.com/groups/3441995576014231/">Facebook </a> group.</p>
 
  
