--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 Interested in becoming a member?  <a href="#contact">Contact us!</a>
   
 <h2 id="events">Events</h2>
-<p><a href="https://www.meetup.com/614-acm-w-prof-chapter/"><img src="https://614acmw.github.io/meetup-logo.png" height="50" width="50" alt="meetup logo" style="vertical-align:middle"></a>Check out upcoming events and sign-up at out <a href="https://www.meetup.com/614-acm-w-prof-chapter/">Meetup </a> group.</p>
+<p><a href="https://www.meetup.com/614-acm-w-prof-chapter/"><img src="https://614acmw.github.io/meetup-logo.png" height="50" width="50" alt="meetup logo"></a> Check out upcoming events and sign-up at out <a href="https://www.meetup.com/614-acm-w-prof-chapter/">Meetup </a> group.</p>
 
 
   <!-- script to retrieve events from meetup group
@@ -83,9 +83,9 @@ Interested in becoming a member?  <a href="#contact">Contact us!</a>
   -->
   
 <h2>Discussion</h2>
-<p></p><a href="https://www.linkedin.com/groups/14308931/"><img src="https://614acmw.github.io/linkedin-logo.png"  height="50" width="50" alt="linkedIn logo" style="vertical-align:middle"></a>Join the public discussion at our <a href="https://www.linkedin.com/groups/14308931/">LinkedIn </a> group.</p>
+<p></p><a href="https://www.linkedin.com/groups/14308931/"><img src="https://614acmw.github.io/linkedin-logo.png"  height="50" width="50" alt="linkedIn logo"></a> Join the public discussion at our <a href="https://www.linkedin.com/groups/14308931/">LinkedIn </a> group.</p>
   
-<p><a href="https://www.facebook.com/groups/3441995576014231/"><img src="https://614acmw.github.io/fb-logo.png" height="50" width="50" alt="facebook logo" style="vertical-align:middle"></a>Join the private discussion at <a href="https://www.facebook.com/groups/3441995576014231/">Facebook </a> group.</p>
+<p><a href="https://www.facebook.com/groups/3441995576014231/"><img src="https://614acmw.github.io/fb-logo.png" height="50" width="50" alt="facebook logo"></a> Join the private discussion at <a href="https://www.facebook.com/groups/3441995576014231/">Facebook </a> group.</p>
 
  
 <h2 id="about">Officers</h2>
