--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body class="center">
 
 <img src="https://614acmw.github.io/Banner2.jpg" class="responsive" alt="614acmw logo & text: Supporting, celebrating and advocating for women in computing in the Columbus, Ohio and Franklin County area.">
-<h1><a href="https://614acmw.github.io/">614acmw.github.io</a></h1>
+<h2><a href="https://614acmw.github.io/">614acmw.github.io</a></h2>
 
 <div class="topnav">
 <a class="active" href="#home">Home</a>
@@ -98,7 +98,22 @@ Interested in becoming a member?  <a href="#contact">Contact us!</a>
   
 
  
-<h2 id="about">Officers</h2>
+<h2 id="about">About ACM-W, ACM and 614ACMW</h2>
+
+<h3> 614 ACM-W is an ACM-W Professional Chapter serving the Columbus, Ohio and Franklin County area. </h3>
+  
+<dl> 
+  <dt>What is <a href="women.acm.org">ACM-W?</a></dt>
+  <dd>ACM-W (ACM's Women in Computing) advocates internationally for the full engagement of women in all aspects of the computing field, providing a wide range of programs and services to members and working in the larger community to advance the contributions of technical women.</dd>
+  
+  <dt>What is <a href="acm.org">ACM?</a></dt>
+  <dd>ACM, the world's largest educational and scientific computing society, delivers resources that advance computing as a science and a profession. ACM provides the computing field's premier Digital Library and serves its members and the computing profession with leading-edge publications, conferences, and career resources. (acm.org)</dd>
+  
+  <dt>What is an <a href="https://www.acm.org/chapters/professionals">ACM Professional chapter?</a></dt>
+  <dd>Participation in a Professional Chapter provides a unique combination of social interaction and professional dialogue among peers, in their own geographic area. Chapter members' backgrounds represent all facets of computing, from academia, research, business and industry. Chapters organize activities and events like tech talks, socials, professional networking, career advice, mentoring, hackathons, celebrations, conferences, and community service</dd>
+</dl>
+
+<h3>614 ACM-W Officers</h3>
 <dl>
 <dt><a href="https://www.linkedin.com/in/bettina-bair/">Bettina Bair</a></dt>
   <dd>retired, senior lecturer in the Computer Science & Engineering department of Ohio State University, founder of the Ohio Celebration of Women in Computing (OCWiC) and OSU ACM-W Student Chapter</dd>
