--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ Interested in becoming a member?  <a href="#contact">Contact us!</a>
 <h2 id="events">Events</h2>
   <table> 
     <td><a href="https://www.meetup.com/614-acm-w-prof-chapter/"><img src="https://614acmw.github.io/meetup-logo.png" height="50" width="50" alt="meetup logo"></a></td>
-    <td><p> Check out upcoming events and sign-up at out <a href="https://www.meetup.com/614-acm-w-prof-chapter/">Meetup </a> group.</p></td>
+    <td><p> Check out upcoming events and sign-up at our <a href="https://www.meetup.com/614-acm-w-prof-chapter/">Meetup </a> group.</p></td>
   </table>
 
 
