--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ Interested in becoming a member?  <a href="#contact">Contact us!</a>
 
 
   <!-- script to retrieve events from meetup group
-    <script language="JavaScript" src="https://feedroll.com/rssviewer/feed2js.php?src=https://www.meetup.com%2F614-acm-w-prof-chapter%2Fevents%2Frss%2F&date=y&targ=y&utf=y&html=a"  charset="UTF-8" type="text/javascript"></script>
+    <script language="JavaScript" src="https://www.meetup.com/614-acm-w-prof-chapter/events/rss/"  charset="UTF-8" type="text/javascript"></script>
     
     <noscript>
     <a href="https://feedroll.com/rssviewer/feed2js.php?src=https%3A%2F%2Fwww.meetup.com%2F614-acm-w-prof-chapter%2Fevents%2Frss%2F&date=y&targ=y&utf=y&html=y">View RSS feed</a>
